<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blog Client</string>
    <string name="action_settings">Settings</string>
    <string name="connectBtn">Join Smart Space</string>
    <string name="guestBtn">Enter as a guest</string>
    <string name="registrationService">Registration service</string>
    <string name="ssIP">IP address</string>
    <string name="ssPort">Port of SIB</string>
    <string name="participantLogin">Login</string>
    <string name="participantEmail">Email: </string>
    <string name="participantPhone">Phone: </string>
    <string name="participantPassword">Password</string>
    <string name="portFormatErr">Incorrect port</string>
    <string name="nameIsUsed">Entered name is already in use</string>
    <string name="registrationFail">Registration failed</string>
    <string name="connectionFail">Failed to connect Smart Space</string>
    <string name="guestNameEmpty">Name has to be filled</string>
    <string name="registrationTitle">Registration</string>
    <string name="userName">Name:</string>
    <string name="userPhone">Phone:</string>
    <string name="userEmail">Email:</string>
    <string name="emptyFields">Name and password have to be filled</string>
    <string name="emptyComment">Comment text has to be filled</string>
    <string name="title_activity_blog_list">Conversation</string>
    <string name="title_activity_main">Conversation: Themes of reports</string>
    <string name="title_activity_theme">Conversation</string>
    <string name="title_activity_leaving_comment">Conversation</string>
    <string name="title_activity_commens_list">Conversation: Comments to theme</string>
    <string name="failed_loading_blog">Failed to load blog themes!</string>
    <string name="failed_loading_logpass">Failed to load smartroom login and pass!</string>
    
      
    <string name="noThemesText">No themes available</string>
    <string name="noCommentsText">No comments available</string>
    
    <string name="action_refresh">Refresh</string>
    <string name="action_overflow">Overflow</string>
    <string name="delete_blog">Delete blog</string>
    <string name="account_settings">Account settings</string>
    <string name="log_out">Log out</string>
    
    <string name="view_comments">View comments</string>
    <string name="leave_comment">Leave a comment</string>
    <string name="back_to_sr_account">Back to SR account</string>
    <string name="title_theme_name"></string>
    <string name="title_speech_time">Speech time:</string>
    <string name="title_reporter">Reporter:</string>
    <string name="reporter_name"></string>
    <string name="title_authors">Authors:</string>
    <string name="authors_names"></string>
    <string name="theme_text">Please, listen this theme reported by @string/reporter_name, leave comments and  ask questions. We hope you\'ll enjoy it!</string>
    
    <string name="title_login">Login:</string>
    <string name="title_password">Password:</string>
    <string name="title_logged_as">Currently logged as:</string>
    <string name="but_login">Login</string>
    
    <string name="person">Person Icon</string>
        
    <string name="title_leaving_comment">Leaving a comment to theme</string>
    <string name="hint_comm">Type your comment</string>
    <string name="publish_comment">Publish comment</string>
 
    <string name="comm_author"></string>
    <string name="comma">,</string>
    
    <string name="test1">test1???</string>
    <string name="test3">test3???</string>
    
    

</resources>
