<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_navigation_refresh" />
    
    <group android:id="@+id/group1" android:visible="true" >
    	<item
	        android:id="@+id/action_overflow"
	        android:title="@string/action_overflow"
	        android:icon="@drawable/ic_action_core_overflow" 
        	android:showAsAction="always" >
            <menu> 
                <item
                    android:id="@+id/delete_blog"
	       			android:orderInCategory="1"
                    android:showAsAction="never"
                    android:title="@string/delete_blog"/> 
                <item
                    android:id="@+id/account_settings"
	       			android:orderInCategory="2"
                    android:showAsAction="never"
                    android:title="@string/account_settings"/>
                <item
                    android:id="@+id/log_out"
	        		android:orderInCategory="3"
                    android:showAsAction="never"
                    android:title="@string/log_out"/>
            </menu>
        </item>
    </group>
    
    
</menu> 