<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_navigation_refresh" />
    
    <group android:id="@+id/group6" android:visible="true" >
    	<item
	        android:id="@+id/action_overflow"
	        android:title="@string/action_overflow"
	        android:icon="@drawable/ic_action_core_overflow" 
        	android:showAsAction="always" >
            <menu> 
                <item
                    android:id="@+id/leave_comment"
	       			android:orderInCategory="1"
                    android:showAsAction="never"
                    android:title="@string/leave_comment"/>
                <item
                    android:id="@+id/log_out"
	        		android:orderInCategory="2"
                    android:showAsAction="never"
                    android:title="@string/log_out"/>
            </menu>
        </item>
    </group>
    
</menu> 