<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_theme_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingLeft="20sp"
        android:paddingTop="10sp"
        android:text="@string/title_theme_name"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title_speech_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_theme_name"
        android:layout_marginTop="20sp"
        android:paddingLeft="20sp"
        android:paddingTop="20sp"
        android:text="@string/title_speech_time"
        android:textSize="20sp" />

    <TextClock
        android:id="@+id/speech_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_speech_time"
        android:layout_marginTop="20sp"
        android:layout_toRightOf="@+id/title_speech_time"
        android:format12Hour="MMMM dd yyyy hh:mm"
        android:format24Hour="MMMM dd yyyy hh:mm"
        android:paddingLeft="20dp"
        android:paddingTop="10sp"
        android:textSize="20sp"
        android:timeZone="Russia/Moscow" />

    <TextView
        android:id="@+id/title_reporter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/speech_time"
        android:layout_marginTop="20sp"
        android:paddingLeft="20sp"
        android:paddingTop="20sp"
        android:text="@string/title_reporter"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/reporter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_reporter"
        android:layout_marginTop="20sp"
        android:layout_toRightOf="@id/title_reporter"
        android:paddingLeft="20dp"
        android:paddingTop="10sp"
        android:text="@string/reporter_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title_authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_reporter"
        android:layout_marginTop="20sp"
        android:paddingLeft="20sp"
        android:paddingTop="20sp"
        android:text="@string/title_authors"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/authors_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_authors"
        android:layout_marginTop="20sp"
        android:layout_toRightOf="@+id/title_authors"
        android:paddingLeft="20dp"
        android:paddingTop="10sp"
        android:text="@string/authors_names"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/theme_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_authors"
        android:layout_marginTop="30sp"
        android:paddingLeft="20sp"
        android:paddingTop="20sp"
        android:text="@string/theme_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/view_comments_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/title_button"
        android:text="@string/view_comments"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/leave_comment_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/title_button"
        android:text="@string/leave_comment"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>