<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    	<TextView
    	    android:id="@+id/title_leaving_comment"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:textSize="23sp"
    	    android:layout_alignParentLeft="true"
    	    android:paddingLeft="20sp"
    	    android:paddingTop="10sp"
    	    android:text="@string/title_leaving_comment"
    	    android:textStyle="bold" />
    	
    	<TextView
    	    android:id="@+id/theme_title"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:textSize="18sp"
    	    android:layout_alignParentLeft="true"
    	    android:layout_below="@id/title_leaving_comment"
    	    android:paddingLeft="20sp"
    	    android:text="@string/test1" />
    	
    	<ImageView
    	    android:id="@+id/icon_author"
    	    android:src="@drawable/ic_action_social_person" 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentLeft="true"
    	    android:contentDescription="@string/person"
    	    android:paddingLeft="10dp"
    	    android:paddingTop="20sp"
    	    android:scaleType="center"
    	    android:layout_below="@id/theme_title" />
    
    	<TextView
    	    android:id="@+id/comment_author_in_leaving_comment"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@id/theme_title"
    	    android:layout_toRightOf="@id/icon_author"
    	    android:paddingLeft="5dp"
    	    android:paddingTop="20sp"
    	    android:text="@string/test3"
    	    android:textSize="20sp" />

    	<EditText
    	    android:id="@+id/editTextLeaveComment"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentLeft="true"
    	    android:layout_below="@+id/icon_author"
    	    android:layout_marginLeft="50dp"
    	    android:layout_marginRight="50dp"
    	    android:layout_marginTop="20dp"
    	    android:gravity="left|bottom"
    	    android:hint="@string/hint_comm"
    	    android:inputType="textMultiLine"
    	    android:minLines="3"
    	    android:maxLines="8"
    	    android:paddingBottom="10dp"
    	    android:paddingLeft="10dp"
    	    android:scrollHorizontally="false"
    	    android:scrollbars="none"
    	    android:textSize="20sp" />

    	 <Button
    	     android:id="@+id/publish_button"
    	     android:layout_width="200dp"
    	     android:layout_height="wrap_content"
    	     android:layout_alignParentBottom="true"
    	     android:layout_alignParentRight="true"
    	     android:layout_marginRight="50dp"
    	     android:layout_marginBottom="50dp"
    	     android:background="@drawable/title_button"
    	     android:text="@string/publish_comment"
    	     android:textColor="@color/white"
    	     android:textSize="20sp"
    	     android:textStyle="bold" />

</RelativeLayout>



