<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_theme_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingLeft="20sp"
        android:paddingTop="10sp"
        android:text="@string/title_theme_name"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_theme_name"
        android:layout_marginTop="20sp"
        android:paddingLeft="20sp"
        android:paddingTop="20sp"
        android:text="@string/title_login"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_login"
        android:layout_marginTop="20sp"
        android:paddingLeft="20sp"
        android:paddingTop="20sp"
        android:text="@string/title_password"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title_logged_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_password"
        android:layout_marginTop="20sp"
        android:paddingLeft="20sp"
        android:paddingTop="20sp"
        android:text="@string/title_logged_as"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/title_button"
        android:text="@string/but_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_password"
        android:layout_toRightOf="@+id/title_password"
        android:ems="12"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/login_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_login"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="10dp"
        android:ems="12"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/logged_as_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_logged_as"
        android:layout_toRightOf="@+id/title_logged_as"
        android:ems="12"
        android:inputType="text"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />

</RelativeLayout>